--- a/dlib/examples/CMakeLists.txt
+++ b/dlib/examples/CMakeLists.txt
@@ -157,7 +157,8 @@ endmacro()
 #add_gui_example(dnn_yolo_train_ex)
 #add_gui_example(dnn_self_supervised_learning_ex)
 add_example(slm_basic_train_ex)
-#add_example(slm_advanced_train_ex)
+add_example(slm_enwiki_train_ex)
+add_example(slm_advanced_train_ex)
 #add_gui_example(3d_point_cloud_ex)
 #add_example(bayes_net_ex)
 #add_example(bayes_net_from_disk_ex)
