--- a/dlib/examples/CMakeLists.txt
+++ b/dlib/examples/CMakeLists.txt
@@ -159,6 +159,7 @@ endmacro()
 add_example(slm_basic_train_ex)
 add_example(slm_enwiki_train_ex)
 add_example(slm_advanced_train_ex)
+add_example(slm_advanced_gqa_train_ex)
 #add_gui_example(3d_point_cloud_ex)
 #add_example(bayes_net_ex)
 #add_example(bayes_net_from_disk_ex)
